--- a/src/sass/module/_page-template.scss
+++ b/src/sass/module/_page-template.scss
@@ -91,3 +91,69 @@
 .page-template__last-text {
   margin-top: rem(32);
 }
+
+// WP化によりscss再指定
+.page-template__text-block {
+  ol:first-of-type {
+    margin-top: rem(32);
+    padding-left: rem(6);
+    counter-reset: num; /* カウンターを初期化 */
+    li {
+      text-indent: -1.15em;
+      padding-left: 1.15em;
+      counter-increment: num; /* 各.list_itemの出現で番号を増加 */
+      &::before {
+        content: counter(num) "."; /* 番号と接尾語を表示 */
+      }
+    }
+  }
+  p:nth-of-type(2) {
+    margin-top: rem(32);
+  }
+  ol:nth-of-type(2),
+  ol:nth-of-type(3) {
+    counter-reset: num;
+    & li {
+      display: block;
+      text-indent: -1.15em;
+      padding-left: calc(1.15em + rem(6));
+      counter-increment: num;
+      &::before {
+        content: counter(num) ".";
+      }
+    }
+  }
+  p:nth-of-type(3) {
+    line-break: anywhere;
+    margin-top: rem(32);
+  }
+  p:nth-of-type(4),
+  p:nth-of-type(5) {
+      margin-top: rem(32);
+    }
+  ol:nth-of-type(4) {
+    padding-left: rem(6);
+    counter-reset: num;
+    li {
+      text-indent: -1.15em;
+      line-break: strict;
+      padding-left: 1.15em;
+      counter-increment: num;
+      &::before {
+        content: counter(num) ".";
+      }
+    }
+  }
+}
+
+.page-template__text-block .page-template__use-text--terms-page:nth-of-type(2) {
+  margin-top: 0;
+}
+
+.page-template__terms-list {
+  margin-top: rem(32);
+}
+
+.page-template__terms-list li {
+  line-break: strict;
+}
