--- a/src/sass/module/_page-about.scss
+++ b/src/sass/module/_page-about.scss
@@ -26,20 +26,21 @@
   }
 }
 
-.page-about::after {
-  @include mq(md) {
-    content: "";
-    position: absolute;
-    right: calc(50% - min(48%, rem(644)));
-    bottom: rem(-186);
-    width: rem(309); // カンプは301×138でその通り指定してもレンダリングサイズが309×146となりピクパチェックで一致しない → 309×146で指定した
-    height: rem(146);
-    background-image: url(../images/common/contact-goldfish-pc.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-  }
-}
+// WP化によりGalleryセクションへ移動（Galleryセクションのロゴ画像と考えた方が自然）
+// .page-about::after {
+//   @include mq(md) {
+//     content: "";
+//     position: absolute;
+//     right: calc(50% - min(48%, rem(644)));
+//     bottom: rem(-186);
+//     width: rem(309); // カンプは301×138でその通り指定してもレンダリングサイズが309×146となりピクパチェックで一致しない → 309×146で指定した
+//     height: rem(146);
+//     background-image: url(../images/common/contact-goldfish-pc.svg);
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: contain;
+//   }
+// }
 
 .page-about__inner {
   position: relative;
