--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1624,6 +1624,47 @@ a:hover {
 	width: 100%;
 }
 
+.loading {
+	background-color: #fff;
+	height: 100vh;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+.loading.loaded {
+	display: none;
+}
+
+.loading__header {
+	left: 50%;
+	position: absolute;
+	text-align: center;
+	top: 50%;
+	transform: translate(-50%, -52%);
+}
+
+.loading__title {
+	color: #408F95;
+	font-family: "Lato", sans-serif;
+	font-size: 2.5rem;
+	font-weight: 400;
+	letter-spacing: 0.53em;
+	line-height: 1.3;
+	text-indent: 0.5em;
+	text-transform: uppercase;
+}
+
+.loading__subtitle {
+	color: #408F95;
+	font-family: "Gotu", sans-serif;
+	font-size: 1.25rem;
+	font-weight: 400;
+	position: relative;
+	right: 0.0625rem;
+}
+
 .modal {
 	align-items: center;
 	background: rgba(32, 32, 32, 0.8);
@@ -1678,10 +1719,12 @@ a:hover {
 
 .mv__header {
 	left: 50%;
+	opacity: 0; /* 初期状態では非表示 */
 	position: absolute;
 	text-align: center;
 	top: 50%;
 	transform: translate(-50%, -52%);
+	transition: opacity 2s ease;
 	z-index: 10;
 }
 
@@ -1703,6 +1746,51 @@ a:hover {
 	font-weight: 400;
 	position: relative;
 	right: 0.0625rem;
+}
+
+.mv__images {
+	height: 100vh;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+}
+
+.mv__img-left,
+.mv__img-right {
+	background-image: url("../images/common/mv_1.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 200% 100%; /* 横幅を2倍にして、左右で分割 */
+	height: 100%;
+	opacity: 1; /* 初期状態は表示されている */
+	position: absolute;
+	transition: transform 2s ease, opacity 0.5s ease;
+	width: 50%;
+}
+
+.mv__img-left {
+	background-position: left center; /* 画像の左半分を表示 */
+	left: 0;
+	top: 0;
+	transform: translateY(100%); /* 初期位置を画面外下部に */
+}
+
+.mv__img-right {
+	background-position: right center; /* 画像の右半分を表示 */
+	right: 0;
+	top: 0;
+	transform: translateY(calc(100% + 80px));
+}
+
+.mv__img-left.loaded,
+.mv__img-right.loaded {
+	transform: translateY(0);
+}
+
+.mv__img-left.hidden,
+.mv__img-right.hidden {
+	opacity: 0; /* フェードアウト */
+	pointer-events: none; /* ユーザー操作を無効化 */
 }
 
 .page-404__wrapper {
@@ -4200,6 +4288,19 @@ html {
 	padding-right: 25px;
 }
 
+.loading__header {
+	transform: translate(-49.7%, -50.8%);
+}
+
+.loading__title {
+	font-size: 5rem;
+	text-indent: 0.48em;
+}
+
+.loading__subtitle {
+	right: 0.125rem;
+}
+
 .modal__img {
 	height: 80%;
 	max-width: 60.625rem;
@@ -4224,6 +4325,11 @@ html {
 
 .mv__subtitle {
 	right: 0.125rem;
+}
+
+.mv__img-left,
+.mv__img-right {
+	background-image: url("../images/common/mv-pc_1.jpg");
 }
 
 .page-404__wrapper {
