--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -1,6 +1,8 @@
 @use "global" as *;
 
 .campaign {
+  position: relative;
+  background-color: white;  // ローディング最初の画面が出ないようにするため
   overflow: hidden;
 }
 
