--- a/src/sass/page/_top-footer.scss
+++ b/src/sass/page/_top-footer.scss
@@ -1,12 +1,13 @@
 @use "global" as *;
 
 .top-footer {
-  margin-top: rem(104);
+  // ローディング最初の画面が出ないようにするため、余白を.top-contactのpadding-bottomで指定
+  // margin-top: rem(104);
   padding-top: rem(48);
   padding-bottom: rem(56);
 
   @include mq(md) {
-    margin-top: rem(160);
+    // margin-top: rem(160);
     padding-top: rem(80);
     padding-bottom: rem(80);
   }
