--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -4,6 +4,7 @@
   position: relative;
   // セクション全体にシャドウがついている。このクラスでbox-shadowを指定しても効果なし
   filter: drop-shadow(0 rem(4) rem(4) rgba(0, 0, 0, 0.25));
+  background-color: white;  // ローディング最初の画面が出ないようにするため
 
   @include mq(md) {
     filter: none;
@@ -13,7 +14,7 @@
 .contact::before {
   content: "";
   position: absolute;
-  top: rem(-26);
+  top: rem(54);
   right: rem(15);
   width: rem(109);
   height: rem(50);
@@ -23,7 +24,7 @@
   background-size: contain;
 
   @include mq(md) {
-    top: rem(-40);
+    top: rem(100);
     right: calc(50% - min(48%, rem(674)));
     width: rem(309); // カンプは301×138でその通り指定してもレンダリングサイズが309×146となりピクパチェックで一致しない → 309×146で指定した
     height: rem(146);
