--- a/src/sass/page/_top-about.scss
+++ b/src/sass/page/_top-about.scss
@@ -1,9 +1,10 @@
 @use "global" as *;
 
+// ローディング最初の画面が出ないようにするため、余白をmargin-top → padding-topへ変更
 .top-about {
-  margin-top: rem(83);
+  padding-top: rem(83);
 
   @include mq(md) {
-    margin-top: rem(139);
+    padding-top: rem(139);
   }
 }
