--- a/src/sass/page/_top-information.scss
+++ b/src/sass/page/_top-information.scss
@@ -1,12 +1,13 @@
 @use "global" as *;
 
 .top-information {
-  margin-top: rem(74);
+  // ローディング最初の画面が出ないようにするため、余白を.top-aboutのpadding-bottomで指定
+  // margin-top: rem(74);
   padding-top: rem(84);
   padding-bottom: rem(84);
 
   @include mq(md) {
-    margin-top: rem(164);
+    // margin-top: rem(164);
     padding-top: rem(100);
     padding-bottom: rem(76);
   }
