リンク先を料金表の各タイトルに指定 24.10.18

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,7 +29,7 @@ dd {
 }
 
 /* Set core root defaults */
-.html1 { // CSSでのスムーススクロールはトップページだけにする。モーダルのあるページにこのCSSがあるとモーダルを閉じたとき背景がスムーススクロールされてしまうから。
+.html1 { // CSSでのスムーススクロールは「information」と「price」だけにする。モーダルのあるページにこのCSSがあるとモーダルを閉じたとき背景がスムーススクロールされてしまうから。
   scroll-behavior: smooth;
   scroll-padding-top: rem(90);  // 追加
 }
