チェックボックス、ラジオボタン「display: none;」削除、余白調整 24.10.19

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -100,10 +100,11 @@ textarea {
   resize: vertical;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  display: none;
-}
+// チェックボックスやラジオボタンで「display: none;」は使わない！
+// input[type="checkbox"],
+// input[type="radio"] {
+//   display: none;
+// }
 
 input[type="submit"],
 input[type="button"],
