--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -123,11 +123,6 @@ textarea {
 	resize: vertical;
 }
 
-input[type=checkbox],
-input[type=radio] {
-	display: none;
-}
-
 input[type=submit],
 input[type=button],
 label,
@@ -3058,10 +3053,6 @@ button,
 	color: #408F95;
 }
 
-[type=radio] {
-	display: none;
-}
-
 [type=radio] + span {
 	cursor: pointer;
 	display: inline-block;
@@ -3103,10 +3094,6 @@ button,
 	top: 50%;
 	transform: translateY(-50%);
 	width: 0.75rem;
-}
-
-[type=checkbox] {
-	display: none;
 }
 
 [type=checkbox] + span {
@@ -3243,8 +3230,8 @@ textarea {
 	margin-top: 1.375rem;
 }
 
-.form__item:nth-child(6) {
-	padding-bottom: 1.4375rem;
+.form__item:nth-child(5) {
+	padding-bottom: 1.3125rem;
 }
 
 textarea.wpcf7-form-control.wpcf7-textarea.wpcf7-validates-as-required {
@@ -3273,11 +3260,11 @@ textarea.wpcf7-form-control.wpcf7-textarea.wpcf7-validates-as-required {
 	margin-top: 1rem;
 }
 
-.form__item:nth-child(3) dd {
+.form__item:nth-child(4) dd {
 	margin-top: 1.0625rem;
 }
 
-.form__item:nth-child(4) dd {
+.form__item:nth-child(5) dd {
 	margin-top: 0.9375rem;
 }
 
@@ -3293,7 +3280,7 @@ textarea.wpcf7-form-control.wpcf7-textarea.wpcf7-validates-as-required {
 
 .form__agree {
 	margin: auto;
-	margin-top: 2.4375rem;
+	margin-top: 0.9375rem;
 	max-width: 17.75rem;
 	width: 100%;
 }
@@ -3408,7 +3395,8 @@ textarea.wpcf7-form-control.wpcf7-textarea.wpcf7-validates-as-required {
 .form__item .wpcf7-list-item {
 	display: block;
 	line-height: 1.65;
-	margin-left: 0;
+	margin-left: -0.4375rem;
+	margin-top: 0.0625rem;
 }
 
 .form__item .wpcf7-not-valid {
@@ -4967,8 +4955,13 @@ html {
 	margin-top: 2.4375rem;
 }
 
+.form__item:nth-child(5) {
+	padding-bottom: 2.375rem;
+}
+
 .form__item:nth-child(6) {
-	padding-bottom: 2.5625rem;
+	margin-top: 2.375rem;
+	padding-bottom: 2.5rem;
 }
 
 .form__item dt {
@@ -4981,23 +4974,23 @@ html {
 	width: 68.5714285714%;
 }
 
-.form__item:nth-child(3) dd {
+.form__item:nth-child(4) dd {
 	margin-top: 0;
 }
 
-.form__item:nth-child(4) dd {
+.form__item:nth-child(5) dd {
 	margin-top: 0;
 }
 
 .form__campaign {
 	background-position: right 0.4375rem top 55%;
 	margin-top: -0.1875rem;
-	padding-bottom: 0.1875rem;
+	padding-bottom: 0.25rem;
 	padding-top: 0.375rem;
 }
 
 .form__agree {
-	margin-top: 4.875rem;
+	margin-top: 3.375rem;
 	max-width: 23.375rem;
 }
 
