--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -362,6 +362,7 @@ a:hover {
 	cursor: pointer;
 	padding: 1rem 2.75rem 0.9375rem 1rem;
 	position: relative;
+	width: 100%;
 }
 
 .accordion__title::before,
@@ -386,6 +387,10 @@ a:hover {
 
 .accordion__title.is-close::after {
 	opacity: 1;
+}
+
+.accordion__title:focus {
+	outline: 0.125rem solid #391E88;
 }
 
 .accordion__title-text {
@@ -3138,6 +3143,10 @@ button,
 	top: 50%; /*チェックマークじゃない場合は以下を変更する*/
 	transform: translateY(-45%) rotate(-35deg);
 	width: 0.6125rem;
+}
+
+[type=checkbox]:focus + span::before {
+	outline: 1px solid #391E88;
 }
 
 select {
