--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -362,6 +362,7 @@ a:hover {
 	cursor: pointer;
 	padding: 1rem 2.75rem 0.9375rem 1rem;
 	position: relative;
+	text-align: left;
 	width: 100%;
 }
 
