--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -23,6 +23,11 @@
   }
 }
 
+.footer__logo-link img {
+  height: 100%;
+  object-fit: cover;
+}
+
 .footer__sns {
   display: flex;
   gap: rem(16);
@@ -43,6 +48,11 @@
   @include mq(md) {
     width: rem(32);
   }
+}
+
+.footer__sns-link img {
+  height: 100%;
+  object-fit: cover;
 }
 
 .footer__nav {
