スクロールしてメインビューを過ぎたらヘッダーの背景色を変える 25.01.05

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1508,6 +1508,10 @@ a:hover {
 	z-index: 1000;
 }
 
+.header.is-color {
+	background-color: #9a9a9a;
+}
+
 .header.is-active {
 	background-color: #408F95;
 }
